--- a/FileTransferClient/FileTransferClient.csproj
+++ b/FileTransferClient/FileTransferClient.csproj
@@ -7,14 +7,6 @@
     <ImportWindowsDesktopTargets>true</ImportWindowsDesktopTargets>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Update="Presentation\Controls\FileBrowser\FileBrowserControl.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Update="Presentation\Controls\TransferQueue\TransferItemControl.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-  </ItemGroup>
-  <ItemGroup>
     <PackageReference Include="entityframework" Version="6.5.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.2">
       <PrivateAssets>all</PrivateAssets>
@@ -30,6 +22,11 @@
     <PackageReference Include="NEST" Version="7.17.4" />
     <PackageReference Include="SSH.NET" Version="2024.2.0" />
   </ItemGroup>
+	<ItemGroup>
+		<Content Update="appsettings.json">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Content>
+	</ItemGroup>
   <ItemGroup>
     <PackageReference Include="FluentFTP" Version="52.0.0" />
     <PackageReference Include="Hangfire.Core" Version="1.8.18" />
