--- a/FileTransferClient/appsettings.json
+++ b/FileTransferClient/appsettings.json
@@ -1,5 +1,8 @@
 {
     "ConnectionStrings": {
         "DefaultConnection": "Server=localhost;Database=master;Trusted_Connection=True;TrustServerCertificate=True;"
+    },
+    "EncryptionSettings": {
+        "EncryptionType": "None"
     }
 }
